--- a/Cooperative_project/prj3_exp11/report/main.tex
+++ b/Cooperative_project/prj3_exp11/report/main.tex
@@ -93,6 +93,197 @@
 \input{tex_file/head.tex}
 
 \section{逻辑电路结构与仿真波形的截图及说明}
+\noindent
+$\bullet$
+\textbf{算数逻辑运算和乘除类运算指令添加}。
+\begin{enumerate}
+  \item 首先添加算数逻辑运算数据通路
+  
+  首先对逻辑信号进行译码操作，得到各个指令的信号（ID阶段）
+
+  \begin{lstlisting}[language=verilog]
+    assign inst_slti   = op_31_26_d[6'h00] & op_25_22_d[4'h8];
+    assign inst_sltui  = op_31_26_d[6'h00] & op_25_22_d[4'h9];
+    assign inst_andi   = op_31_26_d[6'h00] & op_25_22_d[4'hd];
+    assign inst_ori    = op_31_26_d[6'h00] & op_25_22_d[4'he];
+    assign inst_xori   = op_31_26_d[6'h00] & op_25_22_d[4'hf];
+    assign inst_sll_w  = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h1] & op_19_15_d[5'h0e];
+    assign inst_srl_w  = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h1] & op_19_15_d[5'h0f];
+    assign inst_sra_w  = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h1] & op_19_15_d[5'h10];
+    assign inst_pcaddul2i = op_31_26_d[6'h07] & ~id_inst[25];
+    assign inst_mul_w  = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h1] & op_19_15_d[5'h18];
+    assign inst_mulh_w = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h1] & op_19_15_d[5'h19];
+    assign inst_mulh_wu= op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h1] & op_19_15_d[5'h1a];
+    assign inst_div_w  = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h2] & op_19_15_d[5'h00];
+    assign inst_mod_w  = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h2] & op_19_15_d[5'h01];
+    assign inst_div_wu = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h2] & op_19_15_d[5'h02];
+    assign inst_mod_wu = op_31_26_d[6'h00] & op_25_22_d[4'h0] & op_21_20_d[2'h2] & op_19_15_d[5'h03];
+  \end{lstlisting}
+
+  然后根据各条指令的需求，分别对应各条指令需要的alu操作数
+  \begin{lstlisting}[language=verilog]
+    assign id_alu_op[ 0] = inst_add_w | inst_addi_w | inst_ld_w | inst_st_w  | inst_ld_b | inst_ld_h | inst_ld_bu | inst_ld_hu | inst_st_b | inst_st_h
+                        | inst_jirl | inst_bl | inst_pcaddul2i;
+    assign id_alu_op[ 1] = inst_sub_w;
+    assign id_alu_op[ 2] = inst_slt | inst_slti;
+    assign id_alu_op[ 3] = inst_sltu | inst_sltui;
+    assign id_alu_op[ 4] = inst_and | inst_andi;
+    assign id_alu_op[ 5] = inst_nor;
+    assign id_alu_op[ 6] = inst_or | inst_ori;
+    assign id_alu_op[ 7] = inst_xor | inst_xori;
+    assign id_alu_op[ 8] = inst_slli_w | inst_sll_w;
+    assign id_alu_op[ 9] = inst_srli_w | inst_srl_w;
+    assign id_alu_op[10] = inst_srai_w | inst_sra_w;
+    assign id_alu_op[11] = inst_lu12i_w;
+    assign id_alu_op[12] = inst_mul_w ;
+    assign id_alu_op[13] = inst_mulh_w;
+    assign id_alu_op[14] = inst_mulh_wu;
+    assign id_alu_op[15] = inst_div_w;
+    assign id_alu_op[16] = inst_div_wu;
+    assign id_alu_op[17] = inst_mod_w;
+    assign id_alu_op[18] = inst_mod_wu;
+  \end{lstlisting}
+
+  注意，此处对alu进行乘除法拓展，已经扩展为19位数，其中alu[18:12]为乘除法运算的alu操作码
+
+  接着，还需要更新ID模块中对alu源操作数的选择,并且为了前递处理流水线冲突，还需要更新指令使用寄存器1或（和）寄存器2的信号
+  \begin{lstlisting}[language=verilog]
+    assign id_src1_is_pc    = inst_jirl | inst_bl | inst_pcaddul2i;
+    assign id_src2_is_imm   = inst_slli_w |
+                              inst_srli_w |
+                              inst_srai_w |
+                              inst_addi_w |
+                              inst_ld_w   |
+                              inst_st_w   |
+                              inst_lu12i_w|
+                              inst_jirl   |
+                              inst_bl     |
+                              inst_pcaddul2i|
+                              inst_andi   |
+                              inst_ori    |
+                              inst_xori   |
+                              inst_slti   |
+                              inst_sltui  |
+                              inst_ld_b   |
+                              inst_ld_h   |
+                              inst_ld_bu  |
+                              inst_ld_hu  |
+                              inst_st_b   |
+                              inst_st_h;
+  \end{lstlisting}
+  \begin{lstlisting}[language=verilog]
+    assign need_r1         = ~inst_b & ~inst_bl & ~inst_lu12i_w & ~inst_pcaddul2i;//需要使用（读）源寄存器1（rj）的指令
+    assign need_r2         =  inst_add_w | inst_sub_w | inst_slt | inst_sltu | inst_and | inst_or | inst_nor | inst_xor
+                              | inst_beq | inst_bne | inst_blt | inst_bge | inst_bltu | inst_bgeu                           //添加blt等指令
+                              | inst_st_w | inst_sll_w| inst_srl_w | inst_sra_w | inst_mul_w 
+                              | inst_mulh_w | inst_mulh_wu | inst_mod_w | inst_mod_wu | inst_div_w |inst_div_wu
+                              | inst_st_b | inst_st_h;
+                              //需要使用（读）源寄存器2（rk/rd）的指令
+  \end{lstlisting}
+
+  最后，只需要更新各条指令需要的立即数格式，并且修改各个模块之间通信的总线位宽即可
+  \begin{lstlisting}[language=verilog]
+    assign need_ui5   =  inst_slli_w | inst_srli_w | inst_srai_w;
+    assign need_si12  =  inst_addi_w | inst_ld_w | inst_st_w | inst_slti | inst_sltui 
+                        | inst_ld_b | inst_ld_h | inst_ld_bu | inst_ld_hu | inst_st_b | inst_st_h;
+    assign need_si16  =  inst_jirl | inst_beq | inst_bne | inst_blt | inst_bge | inst_bltu | inst_bgeu;     //添加blt等指令
+    assign need_si20  =  inst_lu12i_w | inst_pcaddul2i;
+    assign need_si26  =  inst_b | inst_bl;
+    assign need_ui12  =  inst_andi   | inst_ori | inst_xori ;
+    assign src2_is_4  =  inst_jirl | inst_bl;    
+  \end{lstlisting}
+
+  \item 实现对alu模块的修改，使其能够实现乘除法运算
+  
+  首先，在alu中引入节拍clk，并且引入complete信号用于标识运算结束，
+  这样可以使alu运算在节拍上与流水线一致，并且一个节拍运算完成不了的情
+  况下（切分成两级流水结构的乘法器或者除法器模块），可以进行流水线阻塞来进行等待。
+  \begin{lstlisting}[language=verilog]
+    module alu(
+      input  wire        clk,
+      input  wire        resetn,
+      // input  wire [11:0] alu_op,
+      input  wire [18:0] alu_op,
+      input  wire [31:0] alu_src1,
+      input  wire [31:0] alu_src2,
+      output wire [31:0] alu_result,
+      output wire        complete
+    );
+    assign complete = ~resetn | div_complete & div_en | mul_complete & mul_en | ~div_en & ~mul_en;
+  \end{lstlisting}
+
+  在EX阶段实例化alu，并且实现一个节拍运算完成不了的情况（切分成两级流水结构的乘法器或者除法器模块），可以进行
+  流水线阻塞来进行等待。这里要尤其注意接口位宽的定义，防止疏忽出错。
+  \begin{lstlisting}[language=verilog]
+    alu u_alu(
+      .clk            (clk       ),
+      .resetn         (resetn    ),
+      .alu_op         (ex_alu_op    ),
+      .alu_src1       (ex_alu_src1  ),
+      .alu_src2       (ex_alu_src2  ),
+      .alu_result     (ex_alu_result),
+      .complete       (alu_complete)
+  );
+  assign ex_ready_go      = alu_complete;//等待alu完成运算
+  \end{lstlisting}
+
+  接着，在alu中实现乘法器模块和除法器模块的实例化，其中的使能信号对应如下：
+  \begin{lstlisting}[language=verilog]
+    Wallace_Mul u_mul(
+    .mul_clk(clk),
+    .resetn(resetn),
+    .mul_signed(op_mulh|op_mul),
+    .A(alu_src1),
+    .B(alu_src2),
+    .result(mul_result)
+);
+
+    Div u_div(
+    .div_clk(clk),
+    .resetn(resetn),
+    .div(div_en),
+    .div_signed(op_mod | op_div),
+    .x(alu_src1),
+    .y(alu_src2),
+    .s(div_result),
+    .r(mod_result),
+    .complete(div_complete)
+);
+    assign mul_en = op_mul | op_mulh | op_mulhu;
+    assign div_en = op_mod | op_modu | op_div | op_divu;
+  \end{lstlisting}
+
+  最后对result的选择器进行更新即可
+  \begin{lstlisting}[language=verilog]
+    assign alu_result = ({32{op_add|op_sub}} & add_sub_result)
+                  | ({32{op_slt       }} & slt_result)
+                  | ({32{op_sltu      }} & sltu_result)
+                  | ({32{op_and       }} & and_result)
+                  | ({32{op_nor       }} & nor_result)
+                  | ({32{op_or        }} & or_result)
+                  | ({32{op_xor       }} & xor_result)
+                  | ({32{op_lui       }} & lui_result)
+                  | ({32{op_sll       }} & sll_result)
+                  | ({32{op_srl|op_sra}} & sr_result)
+                  | ({32{op_mod|op_modu}} & mod_result)
+                  | ({32{op_div|op_divu}} & div_result)
+                  | ({32{op_mul       }} & mul_result[31:0])
+                  | ({32{op_mulh|op_mulhu}} & mul_result[63:32]);
+
+  \end{lstlisting}
+
+  \item 实现乘法器和除法器
+  
+  乘法器构建的华莱士树一共有六层，每层华莱士树中的加法器是并行的。故考虑在3~4层加法器
+  中做流水线分割，使得两级流水线的操作时长差异较小。
+  对于除法器就简单的多了，采用恢复余数迭代除法器,当counter == 6'd33的时候发送运算完成信号。\par
+
+
+  注：实际上乘法器和除法器的具体内容并不是我本人设计的，而是参考了互联网上的一些博客/github来源内容以及
+  chatgpt进行的代码修改以适应本实验的使用环境。这样做的初衷是作为调用 Xilinx IP核的一个平替（因为此次实验本来就
+  允许调用Xilinx IP），本来也没有想要通过这个获得额外的加分，只是想要简单了解一下乘除法的底层运算机制。
+
+\end{enumerate}
 
 \noindent
 $\bullet$
@@ -161,6 +352,8 @@ $\bullet$
 \end{enumerate}
 
 
+
+
 \vspace{1ex}
 
 \section{实验过程中遇到的问题、对问题的思考过程及解决方法（比如RTL代码中出现的逻辑bug，逻辑仿真和FPGA调试过程中的难点等）}
@@ -183,32 +376,36 @@ assign id_mem_we        = (inst_st_w | inst_st_b | inst_st_h) & id_valid;
 
 \noindent
 $\bullet$
-\textbf{ALU设计问题}。
-请输入你的实验报告内容。
-
-如果一段话写不下，可以再这里继续新的段落。
-
-插入图片，可以参考如下方法：
+\textbf{模块之间通信位宽定义错误}。
+错误的现象表现为debug_pc信号一直为0，虽然一直在运行，最后只能暂停仿真。
+观察仿真的波形可以发现一些信号的值为高阻态Z，这说明一些信号在运行的时候丢失或者没有进行
+定义，如图所示。
 \begin{figure}[h]
   \centering
-  \includegraphics[width=10cm]{fig/Gaussian.pdf}
-  \caption{这是第一张图}
+  \includegraphics[width=10cm]{fig/1.png}
 \end{figure}
+追根溯源发现是exe阶段的信号总线位宽定义出错，导致不能收到返回数据，修改之后即可正常。
 
 \vspace{1ex}
 
 \noindent
 $\bullet$
-\textbf{其他关键模块设计问题}。
-请输入你的实验报告内容。
-
-如果一段话写不下，可以再这里继续新的段落。
-
-插入第二张图片：
-\begin{figure}[h]
+\textbf{alu乘法器模块嵌入错误}。
+报错如下。
+\begin{figure}[H]
   \centering
-  \includegraphics[width=10cm]{fig/Maxwell.pdf}
-  \caption{这是第二张图}
+  \includegraphics[width=10cm]{fig/2.png}
 \end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=10cm]{fig/3.png}
+\end{figure}
+
+分析可知，报错的地方来自于alu没有及时的返回乘法运算的结果，这是因为
+alu乘法器需要两个周期进行运算，因此需要阻塞流水线进行等待。
+添加在EX模块中的等待即可：
+\begin{lstlisting}[language=verilog]
+  assign ex_ready_go      = alu_complete;//等待alu完成运算
+\end{lstlisting}
 
 \end{document}
